[package]
name = "xcmd-base"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.2.1", features = ["rustls"] }
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
sysinfo = "0.27.7"
systemicons = { path = "../systemicons", optional = true }

tracing = { version = "0.1.29", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.1.2"

[features]
systemicons = ["dep:systemicons"]
