[package]
name = "xcmd-base"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["rustls-0_21"] }
actix-cors = "0.6"
futures-util = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
sysinfo = "0.29"
systemicons = { path = "../systemicons", optional = true }
rcgen = "0.11"
rustls = "0.21"
rustls-pemfile = "1.0"

tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[features]
systemicons = ["dep:systemicons"]
