[package]
name = "xcmd-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["rustls"] }
rust-embed = "6.8"
rustls = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
systemicons = { path = "../systemicons" }
tracing-actix-web = "0.7"
tracing = "0.1"
urlencoding = "2.1"
xcmd-base = { path = "../xcmd-base" }
