[package]
name = "xcmd-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.2.1", features = ["rustls"] }
actix-cors = "0.6.3"
rust-embed = "6.4.2"
rustls = "0.20.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
aws-types = { version = "0.49.0", features = ["hardcoded-credentials"] }
tokio = { version = "1", features = ["full"] }
tracing-actix-web = "0.7"
tracing = "0.1"
xcmd-base = { path = "../xcmd-base" }
