[package]
name = "xcmd-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["rustls"] }
rust-embed = "6.8"
rustls = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.33"
aws-types = "0.56"
aws-credential-types = { version = "0.56", features = ["hardcoded-credentials"] }
tokio = { version = "1", features = ["full"] }
tracing-actix-web = "0.7"
tracing = "0.1"
xcmd-base = { path = "../xcmd-base" }
