[package]
name = "xcmd-ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.2.1", features = ["rustls"] }
actix-cors = "0.6.3"
env_logger = "0.9.1"
log = "0.4.17"
owning_ref = "0.4.1"
rust-embed = "6.4.2"
rustls = "0.20.6"
ssh2 = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
xcmd-base = { path = "../xcmd-base" }
