[package]
name = "xcmd-ssh"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4", features = ["rustls"] }
env_logger = "0.10"
log = "0.4"
rust-embed = "6.8"
rustls = "0.21"
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tracing-actix-web = "0.7"
tracing = "0.1"
xcmd-base = { path = "../xcmd-base" }
